--- a/index.html
+++ b/index.html
@@ -5,393 +5,380 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Система управления СТО — ООО «СЕРВИСТРАНСАВТО»</title>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
- <style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
-    background: #f5f5f5;
-    padding: 10px;
-  }
-
-  .hide {
-    display: none !important;
-  }
-
-  .app {
-    max-width: 1400px;
-    margin: 0 auto;
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  }
-
-  .header {
-    background: #2c3e50;
-    color: white;
-    padding: 15px 20px;
-    border-radius: 8px 8px 0 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .header h1 {
-    font-size: 20px;
-  }
-
-  .user-info {
-    font-size: 14px;
-  }
-
-  .btn {
-    padding: 10px 20px;
-    margin: 5px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-weight: 600;
-    font-size: 14px;
-    transition: all 0.2s;
-  }
-
-  .btn-primary {
-    background: #3498db;
-    color: white;
-  }
-
-  .btn-primary:hover {
-    background: #2980b9;
-  }
-
-  .btn-success {
-    background: #27ae60;
-    color: white;
-  }
-
-  .btn-success:hover {
-    background: #229954;
-  }
-
-  .btn-danger {
-    background: #e74c3c;
-    color: white;
-  }
-
-  .btn-danger:hover {
-    background: #c0392b;
-  }
-
-  .btn-secondary {
-    background: #95a5a6;
-    color: white;
-  }
-
-  .btn-secondary:hover {
-    background: #7f8c8d;
-  }
-
-  .btn-warning {
-    background: #f39c12;
-    color: white;
-  }
-
-  .btn-warning:hover {
-    background: #e67e22;
-  }
-
-  .search-screen {
-    padding: 60px 20px;
-    text-align: center;
-  }
-
-  .search-screen h2 {
-    margin-bottom: 30px;
-    color: #2c3e50;
-  }
-
-  .search-box {
-    max-width: 500px;
-    margin: 0 auto 40px;
-    display: flex;
-    gap: 10px;
-  }
-
-  .search-box input {
-    flex: 1;
-    padding: 15px;
-    font-size: 16px;
-    border: 2px solid #ddd;
-    border-radius: 4px;
-  }
-
-  .search-results {
-    background: #ecf0f1;
-    padding: 20px;
-    margin: 20px auto;
-    max-width: 800px;
-    border-radius: 8px;
-    text-align: left;
-  }
-
-  .result-item {
-    margin: 10px 0;
-    padding: 15px;
-    background: white;
-    border-radius: 4px;
-    border-left: 4px solid #3498db;
-  }
-
-  .result-item h4 {
-    margin-bottom: 10px;
-    color: #2c3e50;
-  }
-
-  .result-item p {
-    margin: 5px 0;
-    font-size: 14px;
-    color: #555;
-  }
-
-  .toolbar {
-    padding: 15px 20px;
-    background: #ecf0f1;
-    border-bottom: 1px solid #bdc3c7;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-  }
-
-  .toolbar-title {
-    font-size: 18px;
-    font-weight: 600;
-    color: #2c3e50;
-  }
-
-  .content {
-    padding: 20px;
-  }
-
-  .table-container {
-    overflow-x: auto;
-  }
-
-  table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-
-  th, td {
-    padding: 12px;
-    text-align: left;
-    border-bottom: 1px solid #ecf0f1;
-  }
-
-  th {
-    background: #34495e;
-    color: white;
-    font-weight: 600;
-  }
-
-  tr:hover {
-    background: #f8f9fa;
-  }
-
-  .status {
-    padding: 5px 10px;
-    border-radius: 20px;
-    font-size: 12px;
-    font-weight: 600;
-  }
-
-  .status-draft {
-    background: #ecf0f1;
-    color: #7f8c8d;
-  }
-
-  .status-agreed {
-    background: #d1ecf1;
-    color: #0c5460;
-  }
-
-  .status-in_progress {
-    background: #fff3cd;
-    color: #856404;
-  }
-
-  .status-completed {
-    background: #d4edda;
-    color: #155724;
-  }
-
-  .form-container {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background: #f8f9fa;
-    border-radius: 8px;
-  }
-
-  .form-group {
-    margin: 15px 0;
-  }
-
-  .form-group label {
-    display: block;
-    margin-bottom: 5px;
-    font-weight: 600;
-    color: #2c3e50;
-  }
-
-  .form-group input,
-  .form-group select,
-  .form-group textarea {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    font-size: 14px;
-  }
-
-  .form-group textarea {
-    min-height: 80px;
-    resize: vertical;
-  }
-
-  .form-row {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 15px;
-  }
-
-  .modal {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.5);
-    z-index: 1000;
-    overflow-y: auto;
-  }
-
-  .modal.show {
-    display: flex;
-    align-items: start;
-    justify-content: center;
-    padding: 20px;
-  }
-
-  .modal-content {
-    background: white;
-    border-radius: 8px;
-    max-width: 900px;
-    width: 100%;
-    max-height: 90vh;
-    overflow-y: auto;
-  }
-
-  .modal-header {
-    padding: 20px;
-    border-bottom: 1px solid #ecf0f1;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  .modal-body {
-    padding: 20px;
-    max-height: 70vh;
-    overflow-y: auto;
-  }
-
-  .close {
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-    color: #7f8c8d;
-  }
-
-  .close:hover {
-    color: #2c3e50;
-  }
-
-  /* Стили для таблиц */
-  .table-form {
-    width: 100%;
-    border-collapse: collapse;
-    margin: 10px 0;
-  }
-
-  .table-form th,
-  .table-form td {
-    padding: 8px;
-    border: 1px solid #ddd;
-    font-size: 13px;
-  }
-
-  .table-form input,
-  .table-form select {
-    width: 100%;
-    padding: 4px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    font-size: 13px;
-  }
-
-  .table-form input[type="number"] {
-    text-align: right;
-  }
-
-  /* Улучшенный UX для модалки */
-  .modal-body > form {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .modal-body > form > * {
-    margin-bottom: 15px;
-  }
-
-  .modal-body button {
-    margin-top: 10px;
-  }
-
-  .modal-body .form-row,
-  .modal-body .table-container {
-    margin-bottom: 15px;
-  }
-
-  @media print {
-    .no-print {
-      display: none !important;
-    }
-    .print-hide {
-      display: none !important;
-    }
-    body {
-      background: white;
+  <style>
+    * {
+      margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
-    .app {
-      box-shadow: none;
-      border-radius: 0;
-      max-width: none;
-    }
-  }
 
-  /* Анимация загрузки */
-  @keyframes spin {
-    to { transform: rotate(360deg); }
-  }
-</style>
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial, sans-serif;
+      background: #f5f5f5;
+      padding: 10px;
+    }
+
+    .hide {
+      display: none !important;
+    }
+
+    .app {
+      max-width: 1400px;
+      margin: 0 auto;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+
+    .header {
+      background: #2c3e50;
+      color: white;
+      padding: 15px 20px;
+      border-radius: 8px 8px 0 0;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .header h1 {
+      font-size: 20px;
+    }
+
+    .user-info {
+      font-size: 14px;
+    }
+
+    .btn {
+      padding: 10px 20px;
+      margin: 5px;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 14px;
+      transition: all 0.2s;
+    }
+
+    .btn-primary {
+      background: #3498db;
+      color: white;
+    }
+
+    .btn-primary:hover {
+      background: #2980b9;
+    }
+
+    .btn-success {
+      background: #27ae60;
+      color: white;
+    }
+
+    .btn-success:hover {
+      background: #229954;
+    }
+
+    .btn-danger {
+      background: #e74c3c;
+      color: white;
+    }
+
+    .btn-danger:hover {
+      background: #c0392b;
+    }
+
+    .btn-secondary {
+      background: #95a5a6;
+      color: white;
+    }
+
+    .btn-secondary:hover {
+      background: #7f8c8d;
+    }
+
+    .btn-warning {
+      background: #f39c12;
+      color: white;
+    }
+
+    .btn-warning:hover {
+      background: #e67e22;
+    }
+
+    .search-screen {
+      padding: 60px 20px;
+      text-align: center;
+    }
+
+    .search-screen h2 {
+      margin-bottom: 30px;
+      color: #2c3e50;
+    }
+
+    .search-box {
+      max-width: 500px;
+      margin: 0 auto 40px;
+      display: flex;
+      gap: 10px;
+    }
+
+    .search-box input {
+      flex: 1;
+      padding: 15px;
+      font-size: 16px;
+      border: 2px solid #ddd;
+      border-radius: 4px;
+    }
+
+    .search-results {
+      background: #ecf0f1;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 800px;
+      border-radius: 8px;
+      text-align: left;
+    }
+
+    .result-item {
+      margin: 10px 0;
+      padding: 15px;
+      background: white;
+      border-radius: 4px;
+      border-left: 4px solid #3498db;
+    }
+
+    .result-item h4 {
+      margin-bottom: 10px;
+      color: #2c3e50;
+    }
+
+    .result-item p {
+      margin: 5px 0;
+      font-size: 14px;
+      color: #555;
+    }
+
+    .toolbar {
+      padding: 15px 20px;
+      background: #ecf0f1;
+      border-bottom: 1px solid #bdc3c7;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    .toolbar-title {
+      font-size: 18px;
+      font-weight: 600;
+      color: #2c3e50;
+    }
+
+    .content {
+      padding: 20px;
+    }
+
+    .table-container {
+      overflow-x: auto;
+    }
+
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+    }
+
+    th, td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ecf0f1;
+    }
+
+    th {
+      background: #34495e;
+      color: white;
+      font-weight: 600;
+    }
+
+    tr:hover {
+      background: #f8f9fa;
+    }
+
+    .status {
+      padding: 5px 10px;
+      border-radius: 20px;
+      font-size: 12px;
+      font-weight: 600;
+    }
+
+    .status-draft {
+      background: #ecf0f1;
+      color: #7f8c8d;
+    }
+
+    .status-agreed {
+      background: #d1ecf1;
+      color: #0c5460;
+    }
+
+    .status-in_progress {
+      background: #fff3cd;
+      color: #856404;
+    }
+
+    .status-completed {
+      background: #d4edda;
+      color: #155724;
+    }
+
+    .form-container {
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 20px;
+      background: #f8f9fa;
+      border-radius: 8px;
+    }
+
+    .form-group {
+      margin: 15px 0;
+    }
+
+    .form-group label {
+      display: block;
+      margin-bottom: 5px;
+      font-weight: 600;
+      color: #2c3e50;
+    }
+
+    .form-group input,
+    .form-group select,
+    .form-group textarea {
+      width: 100%;
+      padding: 10px;
+      border: 1px solid #ddd;
+      border-radius: 4px;
+      font-size: 14px;
+    }
+
+    .form-group textarea {
+      min-height: 80px;
+      resize: vertical;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.5);
+      z-index: 1000;
+      overflow-y: auto;
+    }
+
+    .modal.show {
+      display: flex;
+      align-items: start;
+      justify-content: center;
+      padding: 20px;
+    }
+
+    .modal-content {
+      background: white;
+      border-radius: 8px;
+      max-width: 900px;
+      width: 100%;
+      max-height: 90vh;
+      overflow-y: auto;
+    }
+
+    .modal-header {
+      padding: 20px;
+      border-bottom: 1px solid #ecf0f1;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .modal-body {
+      padding: 20px;
+      max-height: 70vh;
+      overflow-y: auto;
+    }
+
+    .close {
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+      color: #7f8c8d;
+    }
+
+    .close:hover {
+      color: #2c3e50;
+    }
+
+    /* Стили для таблиц */
+    .table-form {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 10px 0;
+    }
+
+    .table-form th,
+    .table-form td {
+      padding: 8px;
+      border: 1px solid #ddd;
+      font-size: 13px;
+    }
+
+    .table-form input,
+    .table-form select {
+      width: 100%;
+      padding: 4px;
+      border: 1px solid #ccc;
+      border-radius: 3px;
+      font-size: 13px;
+    }
+
+    .table-form input[type="number"] {
+      text-align: right;
+    }
+
+    /* Выравнивание полей */
+    .form-row {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+      margin-bottom: 15px;
+    }
+
+    .form-row.full {
+      grid-template-columns: 1fr;
+    }
+
+    @media print {
+      .no-print {
+        display: none !important;
+      }
+      .print-hide {
+        display: none !important;
+      }
+      body {
+        background: white;
+        padding: 0;
+      }
+      .app {
+        box-shadow: none;
+        border-radius: 0;
+        max-width: none;
+      }
+    }
+
+    /* Анимация загрузки */
+    @keyframes spin {
+      to { transform: rotate(360deg); }
+    }
+  </style>
 </head>
 <body>
   <div class="app">
@@ -468,57 +455,54 @@
       </div>
       <div class="modal-body">
         <form id="claimForm">
-          <!-- Скрытые поля -->
           <input type="hidden" id="claimId">
           <input type="hidden" id="claimNumber" name="number">
 
-          <!-- Блок клиента и авто -->
+          <!-- Госномер и Телефон — на одном уровне -->
           <div class="form-row">
-            <div class="form-group">
+            <div>
               <label>Госномер *</label>
               <input type="text" id="carNumber" required>
             </div>
-          </div>
-
-          <div class="form-row">
-            <div class="form-group">
-              <label>Марка *</label>
-              <input type="text" list="carBrandList" id="carBrand" required>
-            </div>
-            <div class="form-group">
-              <label>Модель *</label>
-              <input type="text" id="carModel" required>
+            <div>
+              <label>Телефон *</label>
+              <input type="tel" id="phone" required>
             </div>
           </div>
 
+          <!-- Марка/Модель -->
+          <div class="form-row full">
+            <div>
+              <label>Марка/Модель</label>
+              <input type="text" list="carBrandList" id="carBrand">
+            </div>
+          </div>
+
+          <!-- VIN и Пробег -->
           <div class="form-row">
-            <div class="form-group">
+            <div>
               <label>VIN</label>
               <input type="text" id="vin">
             </div>
-            <div class="form-group">
+            <div>
               <label>Пробег (км)</label>
               <input type="number" id="mileage">
             </div>
           </div>
 
+          <!-- ФИО и Компания -->
           <div class="form-row">
-            <div class="form-group">
+            <div>
               <label>ФИО клиента *</label>
               <input type="text" id="clientFio" required>
             </div>
-            <div class="form-group">
+            <div>
               <label>Компания</label>
               <input type="text" id="clientCompany">
             </div>
           </div>
 
-          <div class="form-group">
-            <label>Телефон *</label>
-            <input type="tel" id="phone" required>
-          </div>
-
-          <!-- Описание проблемы (таблица) -->
+          <!-- Описание проблемы -->
           <h3 style="margin-top:25px; margin-bottom:15px; color:#2c3e50;">Описание проблемы (заполняется мастером)</h3>
           <div class="table-container" style="margin-bottom:15px;">
             <table id="complaintTable" class="table-form">
@@ -585,14 +569,16 @@
           </div>
 
           <!-- Статус -->
-          <div class="form-group">
-            <label>Статус</label>
-            <select id="status">
-              <option value="draft">Черновик</option>
-              <option value="agreed">Согласовано</option>
-              <option value="in_progress">В работе</option>
-              <option value="completed">Завершена</option>
-            </select>
+          <div class="form-row full">
+            <div>
+              <label>Статус</label>
+              <select id="status">
+                <option value="draft">Черновик</option>
+                <option value="agreed">Согласовано</option>
+                <option value="in_progress">В работе</option>
+                <option value="completed">Завершена</option>
+              </select>
+            </div>
           </div>
 
           <!-- Кнопки -->
@@ -909,7 +895,7 @@
           <td>${claim.number || '-'}</td>
           <td>${new Date(claim.created_at).toLocaleString()}</td>
           <td>${claim.car_number || '-'}</td>
-          <td>${claim.car_brand || '-'} ${claim.car_model || ''}</td>
+          <td>${claim.car_brand || '-'}</td>
           <td>${claim.client_fio}</td>
           <td>${claim.phone}</td>
           <td><span class="status status-${claim.status}">${claim.status}</span></td>
@@ -925,7 +911,7 @@
     async function saveClaim(event) {
       event.preventDefault();
 
-      const { data: { user }, error: userError } = await supabaseClient.auth.getUser();
+      const {  { user }, error: userError } = await supabaseClient.auth.getUser();
       if (userError || !user) {
         alert('Сначала войдите в систему');
         return;
@@ -977,7 +963,6 @@
       const claimData = {
         car_number: document.getElementById('carNumber').value,
         car_brand: document.getElementById('carBrand').value,
-        car_model: document.getElementById('carModel').value,
         vin: document.getElementById('vin').value,
         mileage: parseInt(document.getElementById('mileage').value) || null,
         client_fio: document.getElementById('clientFio').value,
@@ -1013,7 +998,6 @@
       document.getElementById('modalTitle').textContent = 'Новая заявка';
       document.getElementById('carNumber').value = '';
       document.getElementById('carBrand').value = '';
-      document.getElementById('carModel').value = '';
       document.getElementById('vin').value = '';
       document.getElementById('mileage').value = '';
       document.getElementById('clientFio').value = '';
