--- a/index.html
+++ b/index.html
@@ -276,10 +276,7 @@
   async function saveClaim(event) {
     event.preventDefault();
 
-    {
-  data: { user },
-  error
-}
+    const {  { user }, error: userError } = await supabaseClient.auth.getUser();
     if (userError || !user) {
       alert('Сначала войдите в систему');
       return;
