--- a/index.html
+++ b/index.html
@@ -911,9 +911,8 @@
   async function saveClaim(event) {
     event.preventDefault();
 
-    const { data: { user }, error: userError } = await supabaseClient.auth.getUser();
-    if (userError || !user) {
-      alert('Сначала войдите в систему');
+    const { data, error: userError } = await supabaseClient.auth.getUser();
+    if (userError || !user) {      alert('Сначала войдите в систему');
       return;
     }
 
