--- a/index.html
+++ b/index.html
@@ -1,193 +1,156 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Система управления СТО</title>
 
+<!-- Bootstrap -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- Supabase -->
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
-body { font-family: Arial, sans-serif; margin: 0; background:#f5f6f8; }
-header { background:#2c3e50; color:#fff; padding:15px; }
-.container { padding:20px; }
+body { background:#f5f7fa; }
+header { background:#2c3e50; color:#fff; padding:15px; font-size:18px; }
 .hidden { display:none; }
-input, button { padding:8px; margin:5px 0; width:100%; }
-button { background:#3498db; color:#fff; border:none; cursor:pointer; }
-button:hover { background:#2980b9; }
-.modal {
-  position:fixed; inset:0; background:rgba(0,0,0,.5);
-  display:none; justify-content:center; align-items:center;
-}
-.modal.show { display:flex; }
-.modal-content {
-  background:#fff; padding:20px; width:400px;
-}
 </style>
 </head>
 
 <body>
 
 <header>
-  <h2>Система управления СТО — ООО «СЕРВИСТРАНСАВТО»</h2>
+  Система управления СТО — ООО «СЕРВИСТРАНСАВТО»
 </header>
 
-<div class="container">
+<div class="container mt-5">
 
   <!-- LOGIN -->
-  <div id="loginScreen">
-    <h3>Вход в систему</h3>
-    <input id="email" type="email" placeholder="Email">
-    <input id="password" type="password" placeholder="Пароль">
-    <button id="loginBtn">Войти</button>
+  <div id="loginScreen" class="card p-4 mx-auto" style="max-width:500px;">
+    <h4 class="text-center mb-3">Вход в систему</h4>
+    <input id="email" type="email" class="form-control mb-2" placeholder="Email">
+    <input id="password" type="password" class="form-control mb-3" placeholder="Пароль">
+    <button id="loginBtn" class="btn btn-primary w-100">Войти</button>
   </div>
 
   <!-- MAIN -->
   <div id="mainScreen" class="hidden">
-    <button id="logoutBtn">Выйти</button>
-    <button id="createClaimBtn">Создать заявку</button>
-    <div id="claimsList"></div>
+    <div class="d-flex justify-content-between mb-3">
+      <h4>Заявки</h4>
+      <button id="logoutBtn" class="btn btn-outline-danger btn-sm">Выйти</button>
+    </div>
+
+    <button id="createClaimBtn" class="btn btn-success mb-3">Создать заявку</button>
+    <div id="claimsList" class="list-group"></div>
   </div>
 
 </div>
 
 <!-- MODAL -->
-<div id="claimModal" class="modal">
-  <div class="modal-content">
-    <h3>Новая заявка</h3>
-    <input id="car" placeholder="Автомобиль">
-    <input id="problem" placeholder="Неисправность">
-    <button id="saveClaimBtn">Сохранить</button>
-    <button id="cancelModalBtn">Отмена</button>
+<div id="claimModal" class="modal fade" tabindex="-1">
+  <div class="modal-dialog">
+    <form id="claimForm" class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Новая заявка</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+        <input id="car" class="form-control mb-2" placeholder="Автомобиль" required>
+        <input id="problem" class="form-control mb-2" placeholder="Проблема" required>
+      </div>
+      <div class="modal-footer">
+        <button type="submit" class="btn btn-primary">Сохранить</button>
+      </div>
+    </form>
   </div>
 </div>
 
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 <script>
-/* ================== SUPABASE ================== */
+// ================== SUPABASE ==================
+const supabaseUrl = 'https://https://xvvhranmftqqddbplypu.supabase.co';
+const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2dmhyYW5tZnRxcWRkYnBseXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3Nzk2OTgsImV4cCI6MjA4MTM1NTY5OH0.nAkRjSi5lHIvGwWCfi7GI48A_XRMEtSMKuJS6V3zgi4';
+const supabase = supabaseJs.createClient(supabaseUrl, supabaseKey);
 
-const SUPABASE_URL = 'https://xvvhranmftqqddbplypu.supabase.co';
-const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2dmhyYW5tZnRxcWRkYnBseXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3Nzk2OTgsImV4cCI6MjA4MTM1NTY5OH0.nAkRjSi5lHIvGwWCfi7GI48A_XRMEtSMKuJS6V3zgi4';
-
-const supabaseClient = supabase.createClient(
-  SUPABASE_URL,
-  SUPABASE_ANON_KEY
-);
-
-/* ================== SCREENS ================== */
-
+// ================== ELEMENTS ==================
 const loginScreen = document.getElementById('loginScreen');
-const mainScreen  = document.getElementById('mainScreen');
-const claimModal  = document.getElementById('claimModal');
+const mainScreen = document.getElementById('mainScreen');
+const claimsList = document.getElementById('claimsList');
+const claimModalEl = document.getElementById('claimModal');
+const claimModal = new bootstrap.Modal(claimModalEl);
 
-/* ================== AUTH ================== */
+// ================== AUTH ==================
+async function checkUser() {
+  const { data } = await supabase.auth.getUser();
+  if (data.user) {
+    loginScreen.classList.add('hidden');
+    mainScreen.classList.remove('hidden');
+    loadClaims();
+  } else {
+    loginScreen.classList.remove('hidden');
+    mainScreen.classList.add('hidden');
+  }
+}
 
 async function login() {
   const email = document.getElementById('email').value;
   const password = document.getElementById('password').value;
 
-  const { error } = await supabaseClient.auth.signInWithPassword({
-    email,
-    password
-  });
+  const { error } = await supabase.auth.signInWithPassword({ email, password });
+  if (error) return alert(error.message);
 
-  if (error) {
-    alert(error.message);
-  } else {
-    showMainScreen();
-  }
+  checkUser();
 }
 
 async function logout() {
-  await supabaseClient.auth.signOut();
-  showLoginScreen();
+  await supabase.auth.signOut();
+  checkUser();
 }
 
-async function checkUser() {
-  const { data } = await supabaseClient.auth.getUser();
-  if (data?.user) {
-    showMainScreen();
-  } else {
-    showLoginScreen();
-  }
-}
-
-/* ================== UI ================== */
-
-function showLoginScreen() {
-  loginScreen.classList.remove('hidden');
-  mainScreen.classList.add('hidden');
-}
-
-function showMainScreen() {
-  loginScreen.classList.add('hidden');
-  mainScreen.classList.remove('hidden');
-  loadClaims();
-}
-
-function showClaimForm() {
-  claimModal.classList.add('show');
-}
-
-function closeModal() {
-  claimModal.classList.remove('show');
-}
-
-/* ================== CLAIMS ================== */
-
-async function saveClaim() {
-  const car = document.getElementById('car').value;
-  const problem = document.getElementById('problem').value;
-
-  const { data, error: userError } = await supabaseClient.auth.getUser();
-  const user = data?.user;
-
-  if (userError || !user) {
-    alert('Сначала войдите в систему');
-    return;
-  }
-
-  const { error } = await supabaseClient
-    .from('claims')
-    .insert({
-      car,
-      problem,
-      user_id: user.id
-    });
-
-  if (error) {
-    alert(error.message);
-  } else {
-    closeModal();
-    loadClaims();
-  }
-}
-
+// ================== CLAIMS ==================
 async function loadClaims() {
-  const { data, error } = await supabaseClient
+  claimsList.innerHTML = '';
+  const { data, error } = await supabase
     .from('claims')
     .select('*')
     .order('id', { ascending:false });
 
-  if (error) return;
-
-  const list = document.getElementById('claimsList');
-  list.innerHTML = '';
+  if (error) return alert(error.message);
 
   data.forEach(c => {
     const div = document.createElement('div');
+    div.className = 'list-group-item';
     div.textContent = `${c.car} — ${c.problem}`;
-    list.appendChild(div);
+    claimsList.appendChild(div);
   });
 }
 
-/* ================== EVENTS ================== */
+async function saveClaim(e) {
+  e.preventDefault();
 
+  const car = document.getElementById('car').value;
+  const problem = document.getElementById('problem').value;
+
+  const { error } = await supabase
+    .from('claims')
+    .insert([{ car, problem }]);
+
+  if (error) return alert(error.message);
+
+  claimModal.hide();
+  document.getElementById('claimForm').reset();
+  loadClaims();
+}
+
+// ================== EVENTS ==================
 document.addEventListener('DOMContentLoaded', () => {
   document.getElementById('loginBtn').addEventListener('click', login);
   document.getElementById('logoutBtn').addEventListener('click', logout);
-  document.getElementById('createClaimBtn').addEventListener('click', showClaimForm);
-  document.getElementById('cancelModalBtn').addEventListener('click', closeModal);
-  document.getElementById('saveClaimBtn').addEventListener('click', saveClaim);
+  document.getElementById('createClaimBtn').addEventListener('click', () => claimModal.show());
+  document.getElementById('claimForm').addEventListener('submit', saveClaim);
   checkUser();
 });
 </script>
