--- a/index.html
+++ b/index.html
@@ -1,21 +1,70 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Система управления СТО</title>
+  <meta charset="UTF-8" />
+  <title>Система управления СТО</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
-<!-- Supabase -->
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+  <style>
+    body {
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background: #f4f6f8;
+    }
 
-<style>
-body { background:#f5f7fa; }
-header { background:#2c3e50; color:#fff; padding:15px; font-size:18px; }
-.hidden { display:none; }
-</style>
+    header {
+      background: #2c3e50;
+      color: #fff;
+      padding: 15px 30px;
+      font-size: 18px;
+      font-weight: bold;
+    }
+
+    .container {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #fff;
+      padding: 30px;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    h2 {
+      text-align: center;
+      margin-bottom: 25px;
+    }
+
+    input, button {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 12px;
+      font-size: 14px;
+    }
+
+    button {
+      background: #3498db;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+
+    button:hover {
+      background: #2980b9;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    #claimsList div {
+      padding: 10px;
+      border-bottom: 1px solid #ddd;
+    }
+  </style>
 </head>
 
 <body>
@@ -24,133 +73,142 @@ header { background:#2c3e50; color:#fff; padding:15px; font-size:18px; }
   Система управления СТО — ООО «СЕРВИСТРАНСАВТО»
 </header>
 
-<div class="container mt-5">
-
-  <!-- LOGIN -->
-  <div id="loginScreen" class="card p-4 mx-auto" style="max-width:500px;">
-    <h4 class="text-center mb-3">Вход в систему</h4>
-    <input id="email" type="email" class="form-control mb-2" placeholder="Email">
-    <input id="password" type="password" class="form-control mb-3" placeholder="Пароль">
-    <button id="loginBtn" class="btn btn-primary w-100">Войти</button>
-  </div>
-
-  <!-- MAIN -->
-  <div id="mainScreen" class="hidden">
-    <div class="d-flex justify-content-between mb-3">
-      <h4>Заявки</h4>
-      <button id="logoutBtn" class="btn btn-outline-danger btn-sm">Выйти</button>
-    </div>
-
-    <button id="createClaimBtn" class="btn btn-success mb-3">Создать заявку</button>
-    <div id="claimsList" class="list-group"></div>
-  </div>
-
+<div class="container" id="loginScreen">
+  <h2>Вход в систему</h2>
+  <input id="email" type="email" placeholder="Email">
+  <input id="password" type="password" placeholder="Пароль">
+  <button id="loginBtn">Войти</button>
 </div>
 
-<!-- MODAL -->
-<div id="claimModal" class="modal fade" tabindex="-1">
-  <div class="modal-dialog">
-    <form id="claimForm" class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">Новая заявка</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-      </div>
-      <div class="modal-body">
-        <input id="car" class="form-control mb-2" placeholder="Автомобиль" required>
-        <input id="problem" class="form-control mb-2" placeholder="Проблема" required>
-      </div>
-      <div class="modal-footer">
-        <button type="submit" class="btn btn-primary">Сохранить</button>
-      </div>
-    </form>
-  </div>
+<div class="container hidden" id="mainScreen">
+  <button id="logoutBtn">Выйти</button>
+  <h2>Заявки</h2>
+  <button id="createClaimBtn">Создать заявку</button>
+  <div id="claimsList"></div>
 </div>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<div class="container hidden" id="claimForm">
+  <h2>Новая заявка</h2>
+  <input id="car" placeholder="Автомобиль">
+  <input id="problem" placeholder="Описание проблемы">
+  <button id="saveClaimBtn">Сохранить</button>
+  <button onclick="closeClaimForm()">Отмена</button>
+</div>
 
 <script>
-// ================== SUPABASE ==================
-const supabaseUrl = 'https://https://xvvhranmftqqddbplypu.supabase.co';
-const supabaseKey = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2dmhyYW5tZnRxcWRkYnBseXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3Nzk2OTgsImV4cCI6MjA4MTM1NTY5OH0.nAkRjSi5lHIvGwWCfi7GI48A_XRMEtSMKuJS6V3zgi4';
-const supabase = supabaseJs.createClient(supabaseUrl, supabaseKey);
+/* =================== SUPABASE =================== */
 
-// ================== ELEMENTS ==================
-const loginScreen = document.getElementById('loginScreen');
-const mainScreen = document.getElementById('mainScreen');
-const claimsList = document.getElementById('claimsList');
-const claimModalEl = document.getElementById('claimModal');
-const claimModal = new bootstrap.Modal(claimModalEl);
+const SUPABASE_URL = 'https://xvvhranmftqqddbplypu.supabase.co;
+const SUPABASE_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2dmhyYW5tZnRxcWRkYnBseXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3Nzk2OTgsImV4cCI6MjA4MTM1NTY5OH0.nAkRjSi5lHIvGwWCfi7GI48A_XRMEtSMKuJS6V3zgi4';
 
-// ================== AUTH ==================
-async function checkUser() {
-  const { data } = await supabase.auth.getUser();
-  if (data.user) {
-    loginScreen.classList.add('hidden');
-    mainScreen.classList.remove('hidden');
-    loadClaims();
-  } else {
-    loginScreen.classList.remove('hidden');
-    mainScreen.classList.add('hidden');
-  }
-}
+const supabaseClient = supabase.createClient(
+  SUPABASE_URL,
+  SUPABASE_KEY
+);
+
+/* =================== AUTH =================== */
 
 async function login() {
   const email = document.getElementById('email').value;
   const password = document.getElementById('password').value;
 
-  const { error } = await supabase.auth.signInWithPassword({ email, password });
-  if (error) return alert(error.message);
+  const { error } = await supabaseClient.auth.signInWithPassword({
+    email,
+    password
+  });
 
-  checkUser();
+  if (error) {
+    alert(error.message);
+  } else {
+    checkUser();
+  }
 }
 
 async function logout() {
-  await supabase.auth.signOut();
-  checkUser();
+  await supabaseClient.auth.signOut();
+  showLogin();
 }
 
-// ================== CLAIMS ==================
-async function loadClaims() {
-  claimsList.innerHTML = '';
-  const { data, error } = await supabase
-    .from('claims')
-    .select('*')
-    .order('id', { ascending:false });
-
-  if (error) return alert(error.message);
-
-  data.forEach(c => {
-    const div = document.createElement('div');
-    div.className = 'list-group-item';
-    div.textContent = `${c.car} — ${c.problem}`;
-    claimsList.appendChild(div);
-  });
+async function checkUser() {
+  const { data } = await supabaseClient.auth.getUser();
+  if (data.user) {
+    showMain();
+    loadClaims();
+  } else {
+    showLogin();
+  }
 }
 
-async function saveClaim(e) {
-  e.preventDefault();
+/* =================== UI =================== */
 
+function showLogin() {
+  document.getElementById('loginScreen').classList.remove('hidden');
+  document.getElementById('mainScreen').classList.add('hidden');
+  document.getElementById('claimForm').classList.add('hidden');
+}
+
+function showMain() {
+  document.getElementById('loginScreen').classList.add('hidden');
+  document.getElementById('mainScreen').classList.remove('hidden');
+  document.getElementById('claimForm').classList.add('hidden');
+}
+
+function showClaimForm() {
+  document.getElementById('claimForm').classList.remove('hidden');
+}
+
+function closeClaimForm() {
+  document.getElementById('claimForm').classList.add('hidden');
+}
+
+/* =================== CLAIMS =================== */
+
+async function saveClaim() {
   const car = document.getElementById('car').value;
   const problem = document.getElementById('problem').value;
 
-  const { error } = await supabase
+  if (!car || !problem) {
+    alert('Заполните все поля');
+    return;
+  }
+
+  const { error } = await supabaseClient
     .from('claims')
     .insert([{ car, problem }]);
 
-  if (error) return alert(error.message);
-
-  claimModal.hide();
-  document.getElementById('claimForm').reset();
-  loadClaims();
+  if (error) {
+    alert(error.message);
+  } else {
+    closeClaimForm();
+    loadClaims();
+  }
 }
 
-// ================== EVENTS ==================
+async function loadClaims() {
+  const { data, error } = await supabaseClient
+    .from('claims')
+    .select('*')
+    .order('id', { ascending: false });
+
+  if (error) return;
+
+  const list = document.getElementById('claimsList');
+  list.innerHTML = '';
+
+  data.forEach(c => {
+    const div = document.createElement('div');
+    div.textContent = `${c.car} — ${c.problem}`;
+    list.appendChild(div);
+  });
+}
+
+/* =================== EVENTS =================== */
+
 document.addEventListener('DOMContentLoaded', () => {
   document.getElementById('loginBtn').addEventListener('click', login);
   document.getElementById('logoutBtn').addEventListener('click', logout);
-  document.getElementById('createClaimBtn').addEventListener('click', () => claimModal.show());
-  document.getElementById('claimForm').addEventListener('submit', saveClaim);
+  document.getElementById('createClaimBtn').addEventListener('click', showClaimForm);
+  document.getElementById('saveClaimBtn').addEventListener('click', saveClaim);
   checkUser();
 });
 </script>
