--- a/index.html
+++ b/index.html
@@ -302,13 +302,16 @@
   </datalist>
 
   <script>
-    // Supabase конфигурация
+    // Supabase конфигурация - ИСПРАВЛЕННАЯ ВЕРСИЯ
     const SUPABASE_URL = 'https://xvvhranmftqqddbplypu.supabase.co';
     const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inh2dmhyYW5tZnRxcWRkYnBseXB1Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU3Nzk2OTgsImV4cCI6MjA4MTM1NTY5OH0.nAkRjSi5lHIvGwWCfi7GI48A_XRMEtSMKuJS6V3zgi4';
     
-    // ВАЖНО: В реальном приложении используйте серверную часть для аутентификации
-    // Этот ключ должен быть защищен и не находиться в клиентском коде
-    const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    // ВАЖНО: Используем проверку существования, чтобы избежать дублирования
+    let supabase;
+    if (!window.supabaseClient) {
+      window.supabaseClient = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+    }
+    supabase = window.supabaseClient;
 
     // Константы и статусы
     const STATUS_LABELS = {
